<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ui.fragment.authentication.ResetPasswordFragment"
android:orientation="vertical">

<ImageView
    android:id="@+id/upImage"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:layout_alignParentTop="true"
    android:layout_marginStart="40dp"
    android:scaleType="fitXY"
    android:src="@drawable/splash_up_im_new" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/upImage"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_20dp"
        android:fontFamily="@font/poppins_medium"
        android:src="@drawable/app_icon"
        android:text="RESET PASSWORD"
        android:textColor="@color/blue"
        android:textSize="@dimen/text_size_22sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/reset_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:fontFamily="@font/poppins_light"
        android:src="@drawable/app_icon"
        android:text="If this account exists, you would receive an OTP in your email shortly"
        android:textColor="@color/blue"
        android:textSize="@dimen/text_size_14sp" />

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/reset_note"
    android:layout_marginTop="@dimen/margin_10dp"
    android:paddingBottom="@dimen/margin_20dp"
    android:scrollbars="none">

    <LinearLayout
        android:id="@+id/fragment_email_sign_up_screen_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TILedt_code"
            style="@style/EditTextLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_code"
                style="@style/SignUpScreenEditTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Code"
                android:paddingStart="@dimen/padding_5dp"
                android:paddingEnd="@dimen/padding_0dp" />

            <View
                style="@style/LoginFragmentDividerViewStyle"
                android:id="@+id/login_fragment_email_address_bottom_view"
                android:layout_marginTop="@dimen/margin_5dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TILedt_pass"
            style="@style/EditTextLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_pass"
                style="@style/SignUpScreenEditTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/padding_5dp"
                android:paddingEnd="@dimen/padding_0dp" />

            <View
                style="@style/LoginFragmentDividerViewStyle"
                android:id="@+id/login_fragment_email_address_bottom_divider_view"
                android:layout_marginTop="@dimen/margin_5dp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TILedt_confirm_pass"
            style="@style/EditTextLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_confirm_pass"
                style="@style/SignUpScreenEditTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_new_password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/padding_5dp"
                android:paddingEnd="@dimen/padding_0dp" />

            <View
                style="@style/LoginFragmentDividerViewStyle"
                android:id="@+id/login_email_address_bottom_divider_view"
                android:layout_marginTop="@dimen/margin_5dp" />

        </com.google.android.material.textfield.TextInputLayout>


        <include
            android:id="@+id/reset_submit_btn"
            style="@style/LoginFragmentButtonStyle"
            layout="@layout/custom_button"
            android:layout_marginStart="@dimen/margin_10dp"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="@dimen/margin_10dp"
            android:backgroundTint="@color/blue"
            android:text="@string/login_screen_fragment_login_button_text_view"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16sp"
            app:cornerRadius="@dimen/margin_5dp"
            app:iconGravity="textStart"
            app:iconSize="@dimen/padding_24dp"
            app:iconTintMode="multiply"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_screen_fragment_password_and_divider_top_level_container_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <!--        <ProgressBar-->
<!--            android:id="@+id/progressBar"-->
<!--            style="?android:attr/progressBarStyle"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content" />-->

<!--        <com.google.android.material.button.MaterialButton-->
<!--            android:id="@+id/reset_submit_btn"-->
<!--            style="@style/SignUpScreenSignUpButton"-->
<!--            android:text="Submit"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="@dimen/margin_55dp" />-->

    </LinearLayout>

</ScrollView>

    <TextView
        android:id="@+id/resend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:layout_toStartOf="@id/resendBtn"
        android:fontFamily="@font/poppins_medium"
        android:gravity="end"
        android:paddingEnd="@dimen/margin_10dp"
        android:src="@drawable/splash_up_im_new"
        android:text="Did not get an email?" />

    <TextView
        android:id="@+id/resendBtn"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:fontFamily="@font/poppins_bold"
        android:text="resend"
        android:textColor="@color/pink" />


</RelativeLayout>